--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn backend.main:app --host 0.0.0.0 --port 8000
     autoDeploy: true
-    plan: starter
+    plan: free
     healthCheckPath: /api/health
     envVars:
       - key: SECRET_KEY
