--- a/mobile/app.json
+++ b/mobile/app.json
@@ -19,10 +19,10 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.yourcompany.bookingapp"
+      "bundleIdentifier": "com.yaveerestro.bookingapp"
     },
     "android": {
-      "package": "com.yourcompany.bookingapp",
+      "package": "com.yaveerestro.bookingapp",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -33,11 +33,11 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
-      "environment": "development",
+      "environment": "production",
       "apiBaseUrl": "http://10.0.2.2:8000",
-      "productionApiBaseUrl": "https://api.example.com",
-      "sentryDsn": "",
-      "amplitudeApiKey": "",
+      "productionApiBaseUrl": "https://api.your-production-domain.com",
+      "sentryDsn": "<your_sentry_dsn>",
+      "amplitudeApiKey": "<your_amplitude_key>",
       "githubUrl": "https://github.com/your-org/your-repo"
     },
     "privacy": "public"
