--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,11 @@
     "start": "expo start --clear",
     "android": "expo run:android --no-interactive",
     "ios": "expo run:ios --no-interactive",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android": "eas build --platform android",
+    "build:ios": "eas build --platform ios",
+    "submit:android": "eas submit --platform android",
+    "submit:ios": "eas submit --platform ios"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
