--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,15 @@
 FROM node:18-alpine
 
+# Install wget for health check
+RUN apk add --no-cache wget
+
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install dependencies (including dev dependencies for npm start)
+RUN npm install
 
 # Copy source code
 COPY . .
@@ -22,9 +25,9 @@ USER nextjs
 # Expose port
 EXPOSE 3000
 
-# Health check
+# Health check (using wget which is available in alpine)
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:3000 || exit 1
+    CMD wget --no-verbose --tries=1 --spider http://localhost:3000 || exit 1
 
 # Start the application
 CMD ["npm", "start"]
